--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="icon" type="image/x-icon" href="favicon.ico" />
 	<meta name="author" content="João Pinheiro" />
 	<meta name="description" content="Personal homepage of João Pinheiro" />
-	<meta name="keywords" content="homepage technology computer" />
+	<meta name="keywords" content="homepage technology computer software engineering" />
 	<meta property="og:title" content="João Pinheiro" />
 	<meta property="og:type" content="profile" />
 	<meta property="profile:first_name" content="João" />
@@ -18,7 +18,7 @@
 	<meta property="og:url" content="https://pineman.github.io" />
 	<meta property="og:description" content="Personal homepage of João Pinheiro" />
 	<meta property="og:site_name" content="pineman.github.io" />
-	<meta property="og:locale" content="en_UK" />
+	<meta property="og:locale" content="en_US" />
 	<title>João Pinheiro</title>
 	<link rel="stylesheet" href="style.css" />
 	<link rel="stylesheet" href="assets/fontawesome/css/all.css">
@@ -104,8 +104,8 @@
 	</div>
 </header>
 <article>
-	<p>My name is João Pinheiro (aka pineman) and I'm from Lisbon, Portugal. I'm passionate about software - especially large distributed systems and infrastructure. I made websites on neopets when I was 10 and started programming in 2014 with python. I love reading the manual - check out what I'm currently reading over at <a href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=now-computer" target="_blank">my goodreads</a>.</p>
-	<p>Currently I'm most experienced with <b>C</b>, <b>Python</b>, <b>Java</b>, <b>JavaScript</b> (& <b>Node.js</b>) and <b>C++/Qt</b>. I'm keen on learning new languages and stacks: when I can, I dabble with Functional Programming and I'm very interested in <a href="https://www.youtube.com/watch?v=BXmOlCy0oBM" target="_blank">Erlang</a>/<a href="https://www.youtube.com/watch?v=JvBT4XBdoUE" target="_blank">Elixir</a>, Rust, Kotlin and Go.</p>
+	<p>My name is João Pinheiro (aka pineman) and I'm from Lisbon, Portugal. I'm passionate about software - especially large distributed systems and infrastructure. I made websites on neopets when I was 10 and started programming in 2014 with python, running linux ever since. I love reading the manual - check out what I'm currently reading over at <a href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=now-computer" target="_blank">my goodreads</a>.</p>
+	<p>Currently I'm most experienced with <b>C</b>, <b>Python</b>, <b>Java</b>, <b>JavaScript</b> (&amp; <b>Node.js</b>) and <b>C++/Qt</b>. I'm keen on learning new languages and stacks: when I can, I dabble with Functional Programming and I'm very interested in <a href="https://www.youtube.com/watch?v=BXmOlCy0oBM" target="_blank">Erlang</a>/<a href="https://www.youtube.com/watch?v=JvBT4XBdoUE" target="_blank">Elixir</a>, Rust, Kotlin and Go.</p>
 	<a href="https://www.eff.org/" class="img-link"><img src="https://www.eff.org/files/eff-join2_0.png" alt="Join EFF!" border="0"></a>
 	<a href="https://www.fsf.org/" class="img-link"><img src="https://static.fsf.org/nosvn/associate/crm/3217362.png" alt="Join the FSF!"></a>
 </article>
