--- a/cv/index.html
+++ b/cv/index.html
@@ -13,7 +13,7 @@
 <body>
 <aside>
 	<side-wrap>
-		<div id="photo"><img id="photo" src="../assets/me2.jpg" /></div>
+		<div id="photo"><img id="photo" src="assets/me2.webp" /></div>
 		<h2 id="name">João Pinheiro</h2>
 		<div id="description">Software • Systems • Curiosity</div>
 		<hr />
@@ -38,7 +38,7 @@
 			<a target="_blank" href="https://abra.fly.dev">abra</a>, <a target="_blank" href="https://github.com/pineman/code">playground</a>, <a target="_blank" href="https://gitlab.com/pineman/homepage">this website</a>
 	</side-wrap>
 	<version>
-		<a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: b38c894
+		<a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: f9f4047
 	</version>
 </aside>
 
