--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta property="profile:last_name" content="Pinheiro" />
 	<meta property="profile:username" content="pineman" />
 	<meta property="profile:gender" content="male" />
-	<meta property="og:image" content="https://pineman.github.io/assets/me2.jpg" />
+	<meta property="og:image" content="https://pineman.github.io/assets/me2.webp" />
 	<meta property="og:url" content="https://pineman.github.io" />
 	<meta property="og:description" content="Personal homepage of João Pinheiro" />
 	<meta property="og:site_name" content="pineman.github.io" />
@@ -90,7 +90,7 @@
 <body>
 <div id="wrap">
 <header>
-	<img src="assets/me2.jpg" />
+	<img src="assets/me2.webp" />
 	<div id ="header-text">
 	<h1>Hi! I'm João.</h1>
 	<span>Software • Systems • Curiosity</span>
