--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <!--<script src="moment.min.js" async></script>-->
+  <!-- start common head -->
 	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+	<link rel="stylesheet" href="/style.css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="author" content="João Pinheiro" />
-	<meta name="description" content="Personal homepage of João Pinheiro" />
+	<meta property="og:image" content="https://pineman.github.io/assets/me2.webp" />
+	<meta property="og:locale" content="en_US" />
+	<meta property="og:site_name" content="João Pinheiro" />
+  <!-- end common head -->
+  <!-- start specific head -->
+  <!--<script src="moment.min.js" async></script>-->
+	<link rel="stylesheet" href="assets/fontawesome/css/all.css">
+	<title>João Pinheiro</title>
 	<meta name="keywords" content="technology computer software engineering" />
+	<meta name="description" content="Personal homepage of João Pinheiro" />
+	<meta property="og:description" content="Personal homepage of João Pinheiro" />
 	<meta property="og:title" content="João Pinheiro" />
+	<meta property="og:url" content="https://pineman.github.io" />
 	<meta property="og:type" content="profile" />
 	<meta property="profile:first_name" content="João" />
 	<meta property="profile:last_name" content="Pinheiro" />
 	<meta property="profile:username" content="pineman" />
 	<meta property="profile:gender" content="male" />
-	<meta property="og:image" content="https://pineman.github.io/assets/me2.webp" />
-	<meta property="og:url" content="https://pineman.github.io" />
-	<meta property="og:description" content="Personal homepage of João Pinheiro" />
-	<meta property="og:site_name" content="João Pinheiro" />
-	<meta property="og:locale" content="en_US" />
-	<title>João Pinheiro</title>
-	<link rel="stylesheet" href="style.css" />
-	<link rel="stylesheet" href="assets/fontawesome/css/all.css">
+  <!-- end specific head -->
 </head>
 <!--
              ###        ##
@@ -110,6 +114,10 @@
 	<p>Currently I'm most experienced with C, Python, Java, JavaScript (&amp; Node.js) and C++/Qt. I'm keen on learning new languages and stacks: when I can, I dabble with Functional Programming and I'm very interested in <a href="https://www.youtube.com/watch?v=BXmOlCy0oBM" target="_blank">Erlang</a>/<a href="https://www.youtube.com/watch?v=JvBT4XBdoUE" target="_blank">Elixir</a>, Rust, Kotlin and Go.</p>
 	<a href="https://www.eff.org/" class="img-link"><img src="https://www.eff.org/files/eff-join2_0.png" alt="Join EFF!" width="128px" height="128px"></a>
 	<a href="https://www.fsf.org/" class="img-link"><img src="https://static.fsf.org/nosvn/associate/crm/3217362.png" alt="Join the FSF!" width="180px" height="45px"></a>
+  <h1>Blog</h1>
+  <ul>
+    <li>2022/12/03 - <a href="/blog/aoc3.html">Advent Of Code 2022: Day 3, or existential crisis?</a></li>
+  </ul>
 </article>
 </div>
 </body>
