--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 	<a href="https://www.fsf.org/" class="img-link"><img src="https://static.fsf.org/nosvn/associate/crm/3217362.png" alt="Join the FSF!" width="180px" height="45px"></a>-->
   <h1 id="blog">Blog</h1>
   <ul>
-    <li>2022/12/03 - <a href="/blog/aoc3.html">Advent Of Code 2022: Day 3, or existential crisis?</a></li>
+    <li>2022/12/03 - <a href="/blog/aoc3.html">AoC 2022: day 3, profiling Go, existential crisis</a></li>
   </ul>
 </article>
 </div>
