--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 	</div>
 </header>
 <article>
-	<p>Hi! My name is João Pinheiro (aka pineman) and I'm from Lisbon, Portugal. I'm passionate about software - especially large distributed systems and infrastructure. I made websites on neopets when I was 10 and started programming in 2014 with python, running linux ever since. I love reading the manual - check out what I'm currently reading over at <a href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=now-computer" target="_blank">my goodreads</a>.</p>
+	<p>Hi! My name is João Pinheiro (aka pineman) and I'm from Lisbon, Portugal. I started programming in 2014 with Python and I've loved software ever since, especially large distributed systems and infrastructure. I love to "read the manual" - check out what I'm currently reading over at <a href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=now-computer" target="_blank">my goodreads</a>.</p>
 	<p>Currently I'm most experienced with C, Python, Java, JavaScript (&amp; Node.js) and C++/Qt. I'm keen on learning new languages and stacks: when I can, I dabble with Functional Programming and I'm very interested in <a href="https://www.youtube.com/watch?v=BXmOlCy0oBM" target="_blank">Erlang</a>/<a href="https://www.youtube.com/watch?v=JvBT4XBdoUE" target="_blank">Elixir</a>, Rust, Kotlin and Go.</p>
 	<!--<a href="https://www.eff.org/" class="img-link"><img src="https://www.eff.org/files/eff-join2_0.png" alt="Join EFF!" width="128px" height="128px"></a>
 	<a href="https://www.fsf.org/" class="img-link"><img src="https://static.fsf.org/nosvn/associate/crm/3217362.png" alt="Join the FSF!" width="180px" height="45px"></a>-->
