--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 	</div>
 </header>
 <article>
-	<p>Hi! My name is João Pinheiro (aka pineman) and I'm from Lisbon, Portugal. I started programming when I was 16 with Python and I've loved software ever since. I read much more than I do, here's a <a href="blog/what-i-read.html">recent list</a> and <a href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=now-computer" target="_blank">my goodreads</a>.</p>
+	<p>Hi! My name is João Pinheiro (aka pineman) and I'm from Lisbon, Portugal. I started programming when I was 16 with Python and I've loved software ever since. I read much more than I do; here's <a href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=now-computer" target="_blank">my goodreads</a> and a <a href="blog/what-i-read.html">recent list</a> I keep for myself.</p>
 	<p>Currently I'm most experienced with C, Python, Java, JavaScript (&amp; Node.js) and C++/Qt. I'm keen on learning new languages and stacks: when I can, I dabble with Functional Programming and I'm very interested in <a href="https://www.youtube.com/watch?v=BXmOlCy0oBM" target="_blank">Erlang</a>/<a href="https://www.youtube.com/watch?v=JvBT4XBdoUE" target="_blank">Elixir</a>, Rust, Kotlin and Go.</p>
   <h1 id="blog">Blog</h1>
   <ul>
