--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="/style.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="author" content="João Pinheiro" />
-	<meta property="og:image" content="https://pineman.github.io/assets/me2.webp" />
+	<meta property="og:image" content="https://pineman.github.io/assets/me.webp" />
 	<meta property="og:locale" content="en_US" />
 	<meta property="og:site_name" content="João Pinheiro" />
   <!-- end common head -->
@@ -95,7 +95,7 @@
 <div id="wrap">
 <header>
   <div id="header-img">
-	  <img src="assets/me2.webp" alt="A picture of me" width="279px" height="279px" />
+	  <img src="assets/me.webp" alt="A picture of me" width="279px" height="279px" />
   </div>
 	<div id ="header-text">
 	<h1>Hi! I'm João.</h1>
