--- a/cv/index.html
+++ b/cv/index.html
@@ -13,7 +13,7 @@
 <body>
 <aside>
 	<side-wrap>
-		<div id="photo"><img id="photo" src="assets/me2.webp" /></div>
+		<div id="photo"><img id="photo" src="assets/me.webp" /></div>
 		<h2 id="name">João Pinheiro</h2>
 		<div id="description">Software • Systems • Curiosity</div>
 		<hr />
@@ -38,7 +38,7 @@
 			<a target="_blank" href="https://abra.fly.dev">abra</a>, <a target="_blank" href="https://github.com/pineman/code">playground</a>, <a target="_blank" href="https://gitlab.com/pineman/homepage">this website</a>
 	</side-wrap>
 	<version>
-		<a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: fc45284
+		<a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: ad1a105
 	</version>
 </aside>
 
@@ -72,7 +72,7 @@
 			</gig-info>
 		</gig-header>
 		<gig-description>
-			<p><b>Tech:</b> Java (JBoss, Spring, Hibernate), React, PostgreSQL, ActiveMQ</p>
+			<p><b>Tech:</b> Java (JBoss, Spring, Hibernate), React, PostgreSQL</p>
 			<p><b>Infra:</b> Docker, Bash, Gitlab CI (K8s on GCloud), Helm, Terraform</p>
 			<a href='https://www.celfocus.com/home/index.php/offer/products/celfocus-one-net-mobile-office'>One Net</a> is Celfocus's enterprise voice solution, with 5 international deployments. The Call Handling Server (CHS) speaks both SS7 and SIP, in 185k SLOC of C++, has an in-memory DB and strict SLAs. It's provisioned via a web Portal, written in React and Java. It provides a JSON REST API and integrates with many external systems.</p><p>I started as a CHS dev and promptly shifted to Portal backend (rarely frontend), as I switched to a cross-functional agile team. I was fortunate enough to learn from the project's founding seniors, and emerged in a sort-of generalist Systems overview role later.</p><p>Currently, I do backend feature work, while being the main dev responsible for dev infra (CI w/ many test types), tooling and glue. I try to keep everyone productive and handle the rarer architectural issues. I spearheaded refactorings, migrations with external teams, new features, updates, new conventions across 4 teams, CI/CD for a new project, failover in production, and even onboarding. But most of all, at Celfocus I learned responsiblity, commitment and TDD.</p>
 		</gig-description>
