--- a/what-i-read.html
+++ b/what-i-read.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="author" content="João Pinheiro" />
 	<meta name="keywords" content="technology computer software engineering" />
-	<meta property="og:image" content="https://pineman.github.io/assets/me2.webp" />
+	<meta property="og:image" content="https://pineman.github.io/assets/me.webp" />
 	<meta property="og:locale" content="en_US" />
 	<meta property="og:site_name" content="João Pinheiro" />
   <!-- end common head -->
@@ -38,6 +38,13 @@
 <a href="../index.html#blog">&lt; back</a>
 <article>
 	<h1>What I read (from hn, reddit, ...)</h1>
+https://opensource.com/article/22/12/old-camera-webcam-linux
+https://www.youtube.com/watch?v=4PaWFYm0kEw
+https://www.youtube.com/watch?v=VzdVSMRu16g
+rewatch most of bryan cantrill's talks
+https://blog.wesleyac.com/posts/consider-sqlite
+https://www.youtube.com/watch?v=nPDomZQ8jI4
+YOSPOS
 	<h6>2023/01/30 to 2023/02/21</h6>
 	<ul>
 	  <li><a href="https://viewsourcecode.org/why/hacking/theFullyUpturnedBin.html">https://viewsourcecode.org/why/hacking/theFullyUpturnedBin.html</a></li>
@@ -64,6 +71,7 @@
 		<li><a href="https://programmingisterrible.com/post/188942142748/scaling-in-the-presence-of-errorsdont-ignore">https://programmingisterrible.com/post/188942142748/scaling-in-the-presence-of-errorsdont-ignore</a></li>
 		<li><a href="https://twitter.com/Foone/status/1059308377740726272">https://twitter.com/Foone/status/1059308377740726272</a></li>
 		<li><a href="http://lists.busybox.net/pipermail/busybox/2010-December/074114.html">http://lists.busybox.net/pipermail/busybox/2010-December/074114.html</a></li>
+		<li><a href="https://www.youtube.com/watch?v=xDuwrtwYHu8">https://www.youtube.com/watch?v=xDuwrtwYHu8</a></li>
 	</ul>
 	<h6>2023/01/18 to 2023/01/30</h6>
 	<ul>
