--- a/cv/index.html
+++ b/cv/index.html
@@ -13,7 +13,7 @@
 <body>
 <aside>
 	<side-wrap>
-		<div id="photo"><img id="photo" src="assets/me2.webp" /></div>
+		<div id="photo"><img id="photo" src="../assets/me.webp" /></div>
 		<h2 id="name">João Pinheiro</h2>
 		<div id="description">Software • Systems • Curiosity</div>
 		<hr />
@@ -35,10 +35,10 @@
 			Go, Kotlin, Rust, Elixir. Distributed Systems, Concurrency, HA
 		<hr />
 		<h3>Projects</h3>
-			<a target="_blank" href="https://abra.fly.dev">abra</a>, <a target="_blank" href="https://github.com/pineman/code">playground</a>, <a target="_blank" href="https://gitlab.com/pineman/homepage">this website</a>
+			<a target="_blank" href="https://abra.fly.dev">abra</a>, <a target="_blank" href="https://github.com/pineman/LEDmatrix">LED Matrix</a>, <a target="_blank" href="https://github.com/pineman/code">playground</a>, <a target="_blank" href="https://github.com/pineman/pineman.github.io">website</a>
 	</side-wrap>
 	<version>
-		<a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: fc45284
+		<a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: 899793e
 	</version>
 </aside>
 
