improve what i read

--- a/what-i-read.html
+++ b/what-i-read.html
@@ -38,14 +38,18 @@
 <a href="../index.html#blog">&lt; back</a>
 <article>
 	<h1>What I read (from hn, reddit, ...)</h1>
-https://opensource.com/article/22/12/old-camera-webcam-linux
-https://www.youtube.com/watch?v=4PaWFYm0kEw
-https://www.youtube.com/watch?v=VzdVSMRu16g
-rewatch most of bryan cantrill's talks
-https://blog.wesleyac.com/posts/consider-sqlite
-https://www.youtube.com/watch?v=nPDomZQ8jI4
-YOSPOS
-	<h6>2023/01/30 to 2023/02/21</h6>
+	<h6>March 2023</h6>
+	<ul>
+		<li><a href="https://opensource.com/article/22/12/old-camera-webcam-linux">https://opensource.com/article/22/12/old-camera-webcam-linux</a></li>
+		<li><a href="https://www.youtube.com/watch?v=4PaWFYm0kEw">https://www.youtube.com/watch?v=4PaWFYm0kEw</a></li>
+		<li><a href="https://www.youtube.com/watch?v=VzdVSMRu16g">https://www.youtube.com/watch?v=VzdVSMRu16g</a></li>
+		<li><a href="rewatch most of bryan cantrill's talks">rewatch most of bryan cantrill's talks</a></li>
+		<li><a href="https://blog.wesleyac.com/posts/consider-sqlite">https://blog.wesleyac.com/posts/consider-sqlite</a></li>
+		<li><a href="https://www.youtube.com/watch?v=nPDomZQ8jI4">https://www.youtube.com/watch?v=nPDomZQ8jI4</a></li>
+		<li><a href="https://forums.somethingawful.com/showthread.php?threadid=3863535&pagenumber=940#lastpost">https://forums.somethingawful.com/showthread.php?threadid=3863535&pagenumber=940#lastpost</a></li>
+		<li><a href="https://evertpot.com/jwt-is-a-bad-default/">https://evertpot.com/jwt-is-a-bad-default/</a></li>
+	</ul>
+	<h6>February 2023</h6>
 	<ul>
 	  <li><a href="https://viewsourcecode.org/why/hacking/theFullyUpturnedBin.html">https://viewsourcecode.org/why/hacking/theFullyUpturnedBin.html</a></li>
 		<li><a href="https://www.youtube.com/watch?v=6hC9IxqdDDw">https://www.youtube.com/watch?v=6hC9IxqdDDw</a></li>
@@ -73,7 +77,7 @@ YOSPOS
 		<li><a href="http://lists.busybox.net/pipermail/busybox/2010-December/074114.html">http://lists.busybox.net/pipermail/busybox/2010-December/074114.html</a></li>
 		<li><a href="https://www.youtube.com/watch?v=xDuwrtwYHu8">https://www.youtube.com/watch?v=xDuwrtwYHu8</a></li>
 	</ul>
-	<h6>2023/01/18 to 2023/01/30</h6>
+	<h6>January 2023</h6>
 	<ul>
 	  <li><a href='https://www.youtube.com/@tom7/videos'>https://www.youtube.com/@tom7/videos</a></li>
 	  <li><a href='https://www.youtube.com/watch?v=A60q6dcoCjw'>https://www.youtube.com/watch?v=A60q6dcoCjw</a></li>
@@ -95,25 +99,12 @@ YOSPOS
 	  <li><a href='http://canonical.org/~kragen/tao-of-programming'>http://canonical.org/~kragen/tao-of-programming</a></li>
 	  <li><a href='https://www.youtube.com/watch?v=p8u_k2LIZyo'>https://www.youtube.com/watch?v=p8u_k2LIZyo</a></li>
 	  <li><a href='https://rubyonrails.org/doctrine'>https://rubyonrails.org/doctrine</a></li>
-	</ul>
-	<h6>2023/01/18</h6>
-	<ul>
 	  <li><a href='https://www.youtube.com/watch?v=UAUdIQZKV88'>https://www.youtube.com/watch?v=UAUdIQZKV88</a> - interesting discussion in the comments about do it (crafting) right/premature optimization, but probably just different philosophical values</li>
 	  <li><a href='https://web.dev/webtransport'>https://web.dev/webtransport</a></li>
-	</ul>
-	<h6>2023/01/17</h6>
-	<ul>
 	  <li><a href='https://how.complexsystems.fail/'>https://how.complexsystems.fail/</a></li>
 	  <li><a href='https://www.reddit.com/r/rust/comments/10dpw5r/c_vs_rust_which_is_faster_x86_assembly_inside/'>https://www.reddit.com/r/rust/comments/10dpw5r/c_vs_rust_which_is_faster_x86_assembly_inside/</a></li>
-	</ul>
-	<h6>2023/01/08 to 2023/01/13</h6>
-	<ul>
 	  <li><a href='https://hynek.me/articles/semver-will-not-save-you/'>https://hynek.me/articles/semver-will-not-save-you/</a></li>
 	  <li><a href='https://www.kitchensoap.com/2014/11/14/the-infinite-hows-or-the-dangers-of-the-five-whys/'>https://www.kitchensoap.com/2014/11/14/the-infinite-hows-or-the-dangers-of-the-five-whys/</a></li>
-	  <li><a href=''></a></li>
-	</ul>
-	<h6>2022/12/27 to 2023/01/08</h6>
-	<ul>
 	  <li><a href='http://cryto.net/~joepie91/blog/2016/06/13/stop-using-jwt-for-sessions/'>http://cryto.net/~joepie91/blog/2016/06/13/stop-using-jwt-for-sessions/</a></li>
 	  <li><a href='https://www.stevenbuccini.com/8-hard-truths-on-getting-laid-off'>https://www.stevenbuccini.com/8-hard-truths-on-getting-laid-off</a></li>
 	  <li><a href='https://withinboredom.info/blog/2022/12/29/golang-is-evil-on-shitty-networks/'>https://withinboredom.info/blog/2022/12/29/golang-is-evil-on-shitty-networks/</a></li>
@@ -126,10 +117,8 @@ YOSPOS
 	  <li><a href='https://bvisness.me/advent-of-dreams/'>https://bvisness.me/advent-of-dreams/</a></li>
 	  <li><a href='https://thume.ca/2023/01/02/one-machine-twitter/'>https://thume.ca/2023/01/02/one-machine-twitter/</a></li>
 	  <li><a href='https://programmingisterrible.com/post/162346490883/how-do-you-cut-a-monolith-in-half'>https://programmingisterrible.com/post/162346490883/how-do-you-cut-a-monolith-in-half</a></li>
-	  <li><a href='https://signalsandthreads.com/multicast-and-the-markets/'>https://signalsandthreads.com/multicast-and-the-markets/</a></li>
-	  <li><a href='https://signalsandthreads.com/state-machine-replication-and-why-you-should-care/'>https://signalsandthreads.com/state-machine-replication-and-why-you-should-care/</a></li>
 	</ul>
-	<h6>2022/12/27</h6>
+	<h6>December 2022</h6>
 	<ul>
 	  <li><a href='https://eli.thegreenplace.net/2021/rest-servers-in-go-part-7-graphql'>https://eli.thegreenplace.net/2021/rest-servers-in-go-part-7-graphql</a> - all parts actually</li>
 	  <li><a href='https://eli.thegreenplace.net/2017/benefits-of-dependencies-in-software-projects-as-a-function-of-effort/'>https://eli.thegreenplace.net/2017/benefits-of-dependencies-in-software-projects-as-a-function-of-effort/</a></li>
@@ -137,9 +126,8 @@ YOSPOS
 	  <li><a href='https://eli.thegreenplace.net/2019/on-concurrency-in-go-http-servers'>https://eli.thegreenplace.net/2019/on-concurrency-in-go-http-servers</a></li>
 	  <li><a href='https://eli.thegreenplace.net/2018/beware-of-copying-mutexes-in-go/'>https://eli.thegreenplace.net/2018/beware-of-copying-mutexes-in-go/</a></li>
 	  <li><a href='https://www.joelonsoftware.com/2001/10/14/in-defense-of-not-invented-here-syndrome/'>https://www.joelonsoftware.com/2001/10/14/in-defense-of-not-invented-here-syndrome/</a></li>
-	</ul>
-	<h6>2022/12/26</h6>
-	<ul>
+	  <li><a href='https://signalsandthreads.com/multicast-and-the-markets/'>https://signalsandthreads.com/multicast-and-the-markets/</a></li>
+	  <li><a href='https://signalsandthreads.com/state-machine-replication-and-why-you-should-care/'>https://signalsandthreads.com/state-machine-replication-and-why-you-should-care/</a></li>
 	  <li><a href='https://rcoh.me/posts/linear-time-median-finding'>https://rcoh.me/posts/linear-time-median-finding</a></li>
 	  <li><a href='https://rcoh.me/posts/why-you-can-have-a-million-go-routines-but-only-1000-java-threads/'>https://rcoh.me/posts/why-you-can-have-a-million-go-routines-but-only-1000-java-threads</a></li>
 	  <li><a href='https://www.youtube.com/watch?v=9j0oQkqzhAE'>https://www.youtube.com/watch?v=9j0oQkqzhAE</a></li>
