--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 	</div>
 </header>
 <article>
-	<p>Hi! My name is João Pinheiro (aka pineman) and I'm from Lisbon, Portugal. I started programming when I was 16 with Python and I've loved software ever since. I read much more than I do; here's <a href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=now-computer" target="_blank">my goodreads</a> and an <a href="what-i-read.html">incomplete list</a> I started keeping for myself.</p>
-	<p>Currently I'm most experienced with C, Python, Java, JavaScript (&amp; Node.js) and C++/Qt. I'm keen on learning new languages and stacks: when I can, I dabble with Functional Programming and I'm very interested in <a href="https://www.youtube.com/watch?v=BXmOlCy0oBM" target="_blank">Erlang</a>/<a href="https://www.youtube.com/watch?v=JvBT4XBdoUE" target="_blank">Elixir</a>, Rust, Kotlin and Go.</p>
+	<p>Hi! My name is João Pinheiro (aka pineman), I'm from Lisbon, Portugal and I like computers. I started programming when I was 16 with Python and I've loved software ever since. Currently at <a href="https://www.amplemarket.com/">amplemarket</a>!</p>
+	<p>Here are some <a href="what-i-read.html">cool articles</a> I found on the web, and some <a href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=read-computer" target="_blank">books</a> I've read (don't look at the TODO pile).
   <h1 id="blog">Blog</h1>
   <ul>
     <li>2022/12/03 - <a href="blog/aoc3.html">AoC 2022: day 3, profiling Go, existential crisis</a></li>
