--- a/cv/index.html
+++ b/cv/index.html
@@ -32,13 +32,13 @@
 			Python, Java, C, C++, JavaScript, Bash, Git, PostgreSQL, Linux, Docker, K8s, GCloud, Gitlab CI
 		<hr />
 		<h3>Interests</h3>
-			Go, Kotlin, Rust, Elixir. Distributed Systems, Concurrency, HA
+			Distributed Systems, Reliability
 		<hr />
 		<h3>Projects</h3>
 			<a target="_blank" href="https://abra.fly.dev">abra</a>, <a target="_blank" href="https://github.com/pineman/LEDmatrix">LED Matrix</a>, <a target="_blank" href="https://github.com/pineman/code">playground</a>, <a target="_blank" href="https://github.com/pineman/pineman.github.io">website</a>
 	</side-wrap>
 	<version>
-		<a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: 899793e
+		<a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: 1eb3de2
 	</version>
 </aside>
 
