slightly less sarcastic

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 </header>
 <article>
 	<p>Hi! My name is João Pinheiro (aka pineman), I'm from Lisbon, Portugal and I like computers. I started programming when I was 16 with Python and I've loved software ever since. Currently at <a href="https://www.amplemarket.com/">amplemarket</a>!</p>
-	<p>Here are some <a href="what-i-read.html">cool articles</a> I found on the web, and some <a href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=read-computer" target="_blank">books</a> I've read (don't look at the TODO pile).
+	<p>Here are some <a href="what-i-read.html">cool articles</a> I found on the web, and some <a href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=read-computer" target="_blank">books</a> I've read. Alas, there are many more things I'd like to read and do.</p>
   <h1 id="blog">Blog</h1>
   <ul>
     <li>2022/12/03 - <a href="blog/aoc3.html">AoC 2022: day 3, profiling Go, existential crisis</a></li>
