--- a/aoc3.html
+++ b/aoc3.html
@@ -22,7 +22,7 @@
 	<meta property="article:tag" content="software" />
 	<meta property="article:tag" content="engineering" />
 
-	<meta property="og:url" content="https://pineman.github.io/blog/aoc3.html" />
+	<meta property="og:url" content="https://pineman.github.io/aoc3.html" />
 	<meta property="article:published_time" content="20221203" />
 	<meta property="article:modified_time" content="20221203" />
 	<title>AoC 2022: day 3, profiling Go, existential crisis</title>
