--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <meta property="og:image" content="https://pineman.github.io/assets/me.webp" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:site_name" content="João Pinheiro" />
-
   <link rel="stylesheet" href="assets/fontawesome/css/all.css">
   <title>João Pinheiro</title>
   <meta name="description" content="Personal homepage of João Pinheiro" />
@@ -87,7 +86,6 @@
                            #+######''######
                             ##     ###
 -->
-
 <body>
 <div id="wrap">
 <header>
@@ -111,15 +109,16 @@
   <p>Here are some <a href="what-i-read.html">cool articles</a> I found on the web, and some <a href="https://www.goodreads.com/review/list/30442257-jo-o-pinheiro?order=d&shelf=read-computer" target="_blank">books</a> I've read. Alas, there are many more things I'd like to read and do.</p>
   <h1 id="blog">Blog</h1>
   <ul>
-    <li>2022/12/03 - <a href="aoc3.html">AoC 2022: day 3, profiling Go, existential crisis</a></li>
+    <li>2022/12/03 - <a href="aoc3.html">AoC 2022: day 3,
+profiling Go, existential crisis</a></li>
   </ul>
   <a href="https://www.eff.org/" class="img-link"><img src="https://www.eff.org/files/eff-join2_0.png" alt="Join EFF!" width="128px" height="128px"></a>
   <a href="https://www.fsf.org/" class="img-link"><img src="https://static.fsf.org/nosvn/associate/crm/3217362.png" alt="Join the FSF!" width="180px" height="45px"></a>
 </article>
 </div>
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
 <script>
   document.getElementById('years').innerText = moment("2014-02-01").fromNow();
-</script>
+</script>-->
 </html>
