--- a/cv/index.html
+++ b/cv/index.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#171B36">
-  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="../favicon.ico" />
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="assets/fontawesome/css/all.css" />
+  <link rel="stylesheet" href="../assets/fontawesome/css/all.css" />
   <title>João Pinheiro CV</title>
 </head>
-
 <body>
 <aside>
   <side-wrap>
@@ -74,7 +73,9 @@
     <gig-description>
       <p><b>Tech:</b> Java (JBoss, Spring, Hibernate), React, PostgreSQL, ActiveMQ</p>
       <p><b>Infra:</b> Docker, Bash, Gitlab CI (K8s on GCloud), Helm, Terraform</p>
-      <a href='https://www.celfocus.com/home/index.php/offer/products/celfocus-one-net-mobile-office'>One Net</a> is Celfocus's enterprise voice solution, with 5 international deployments. The Call Handling Server (CHS) speaks both SS7 and SIP, in 185k SLOC of C++, has an in-memory DB and strict SLAs. It's provisioned via a web Portal, written in React and Java. It provides a JSON REST API and integrates with many external systems.</p><p>I started as a CHS dev and promptly shifted to Portal backend (rarely frontend), as I switched to a cross-functional agile team. I was fortunate enough to learn from the project's founding seniors, and emerged in a sort-of generalist Systems overview role later.</p><p>Currently, I do backend feature work, while being the main dev responsible for dev infra (CI w/ many test types), tooling and glue. I try to keep everyone productive and handle the rarer architectural issues. I spearheaded refactorings, migrations with external teams, new features, updates, new conventions across 4 teams, CI/CD for a new project, failover in production, and even onboarding. But most of all, at Celfocus I learned responsiblity, commitment and TDD.</p>
+      <p><a href='https://www.celfocus.com/home/index.php/offer/products/celfocus-one-net-mobile-office'>One Net</a> is Celfocus's enterprise voice solution, with 5 international deployments. The Call Handling Server (CHS) speaks both SS7 and SIP, in 185k SLOC of C++, has an in-memory DB and strict SLAs. It's provisioned via a web Portal, written in React and Java. It provides a JSON REST API and integrates with many external systems.</p>
+      <p>I started as a CHS dev and promptly shifted to Portal backend (rarely frontend), as I switched to a cross-functional agile team. I was fortunate enough to learn from the project's founding seniors, and emerged in a sort-of generalist Systems overview role later.</p>
+      <p>Currently, I do backend feature work, while being the main dev responsible for dev infra (CI w/ many test types), tooling and glue. I try to keep everyone productive and handle the rarer architectural issues. I spearheaded refactorings, migrations with external teams, new features, updates, new conventions across 4 teams, CI/CD for a new project, failover in production, and even onboarding. But most of all, at Celfocus I learned responsiblity, commitment and TDD.</p>
     </gig-description>
   </gig>
   <hr />
@@ -104,7 +105,7 @@
     </gig-header>
     <gig-description>
       <p>In Formula Student teams build, test and race a formula style car. I programmed PIC μCs and reduced the dev loop to one keypress. Worked on a GUI (C++/Qt) &amp; ported it to windows. I dearly miss the passion and dedication of the team.</p>
-    <gig-description>
+    </gig-description>
   </gig>
   <hr />
   <gig>
