--- a/aoc3.html
+++ b/aoc3.html
@@ -228,8 +228,8 @@ it's more like amortized cost - in a terrible hash table (or just a
 terrible day or input) buckets are arrays, and using a terrible hash
 function all items end up in the same bucket, so the cost starts to look
 a lot more like O(n) due to linear searches, and intersection goes more
-like O(n^2) (maybe O(nlg n) using un-sorted trees). I bet all of this is
-wrong though.<a href="#fnref1" class="footnote-back"
+like O(n^2) (maybe O(nlog n) using un-sorted trees). I bet all of this
+is wrong though.<a href="#fnref1" class="footnote-back"
 role="doc-backlink">↩︎</a></p></li>
 <li id="fn2"><p>People on... the internet... usually craft these
 so-called 'big boy' inputs. <a
