ken thompson is amazing

--- a/what-i-read.html
+++ b/what-i-read.html
@@ -18,8 +18,8 @@
   <meta property="article:tag" content="software" />
   <meta property="article:tag" content="engineering" />
   <meta property="og:url" content="https://pineman.github.io/what-i-read.html" />
-  <meta property="article:published_time" content="20230320" />
-  <meta property="article:modified_time" content="20230320" />
+  <meta property="article:published_time" content="20230323" />
+  <meta property="article:modified_time" content="20230323" />
   <title>What I read</title>
   <meta property="og:title" content="What I read" />
   <meta name="description" content="What I read" />
@@ -30,9 +30,11 @@
 <a href="index.html">&lt; back</a>
 <article>
   <h1>What I read</h1>
-  <h6>last updated: 2023/03/20</h6>
+  <h6>last updated: 2023/03/23</h6>
   <h4>March 2023</h4>
 <ul>
+  <li><a href="https://www.youtube.com/watch?v=EY6q5dv_B-o">https://www.youtube.com/watch?v=EY6q5dv_B-o</a> </li>
+  <li><a href="https://www.youtube.com/watch?v=kaandEt_pKw">https://www.youtube.com/watch?v=kaandEt_pKw</a> </li>
   <li><a href="https://www.youtube.com/watch?v=DMQ_HcNSOAI">https://www.youtube.com/watch?v=DMQ_HcNSOAI</a> </li>
   <li><a href="https://opensource.com/article/22/12/old-camera-webcam-linux">https://opensource.com/article/22/12/old-camera-webcam-linux</a> </li>
   <li><a href="https://www.youtube.com/watch?v=4PaWFYm0kEw">https://www.youtube.com/watch?v=4PaWFYm0kEw</a> </li>
