--- a/what-i-read.html
+++ b/what-i-read.html
@@ -33,6 +33,7 @@
   <h6>last updated: 2023/03/28</h6>
   <h4>March 2023</h4>
 <ul>
+  <li><a href="https://eugenkiss.github.io/7guis/tasks">https://eugenkiss.github.io/7guis/tasks</a> </li>
   <li><a href="https://www.youtube.com/watch?v=RUYUzlRgt_Q">https://www.youtube.com/watch?v=RUYUzlRgt_Q</a> </li>
   <li><a href="https://github.com/jawhitti/INTERCAL">https://github.com/jawhitti/INTERCAL</a> </li>
   <li><a href="https://en.wikipedia.org/wiki/INTERCAL">https://en.wikipedia.org/wiki/INTERCAL</a> </li>
