--- a/what-i-read.html
+++ b/what-i-read.html
@@ -18,8 +18,8 @@
   <meta property="article:tag" content="software" />
   <meta property="article:tag" content="engineering" />
   <meta property="og:url" content="https://pineman.github.io/what-i-read.html" />
-  <meta property="article:published_time" content="20230328" />
-  <meta property="article:modified_time" content="20230328" />
+  <meta property="article:published_time" content="20230329" />
+  <meta property="article:modified_time" content="20230329" />
   <title>What I read</title>
   <meta property="og:title" content="What I read" />
   <meta name="description" content="What I read" />
@@ -30,9 +30,10 @@
 <a href="index.html">&lt; back</a>
 <article>
   <h1>What I read</h1>
-  <h6>last updated: 2023/03/28</h6>
+  <h6>last updated: 2023/03/29</h6>
   <h4>March 2023</h4>
 <ul>
+  <li><a href="http://www.incompleteideas.net/IncIdeas/BitterLesson.html">http://www.incompleteideas.net/IncIdeas/BitterLesson.html</a> </li>
   <li><a href="https://eugenkiss.github.io/7guis/tasks">https://eugenkiss.github.io/7guis/tasks</a> </li>
   <li><a href="https://www.youtube.com/watch?v=RUYUzlRgt_Q">https://www.youtube.com/watch?v=RUYUzlRgt_Q</a> </li>
   <li><a href="https://github.com/jawhitti/INTERCAL">https://github.com/jawhitti/INTERCAL</a> </li>
