--- a/what-i-read.html
+++ b/what-i-read.html
@@ -18,8 +18,8 @@
   <meta property="article:tag" content="software" />
   <meta property="article:tag" content="engineering" />
   <meta property="og:url" content="https://pineman.github.io/what-i-read.html" />
-  <meta property="article:published_time" content="20230410" />
-  <meta property="article:modified_time" content="20230410" />
+  <meta property="article:published_time" content="20230412" />
+  <meta property="article:modified_time" content="20230412" />
   <title>What I read</title>
   <meta property="og:title" content="What I read" />
   <meta name="description" content="What I read" />
@@ -30,9 +30,16 @@
 <a href="index.html">&lt; back</a>
 <article>
   <h1>What I read</h1>
-  <h6>last updated: 2023/04/10</h6>
+  <h6>last updated: 2023/04/12</h6>
   <h4>April 2023</h4>
 <ul>
+  <li><a href="https://stanko.io/rabbitmq-is-more-than-a-sidekiq-replacement-b730d8176fb">https://stanko.io/rabbitmq-is-more-than-a-sidekiq-replacement-b730d8176fb</a> </li>
+  <li><a href="https://www.crunchydata.com/blog/message-queuing-using-native-postgresql">https://www.crunchydata.com/blog/message-queuing-using-native-postgresql</a> </li>
+  <li><a href="https://www.migops.com/blog/select-for-update-and-its-behavior-with-foreign-keys-in-postgresql/">https://www.migops.com/blog/select-for-update-and-its-behavior-with-foreign-keys-in-postgresql/</a> </li>
+  <li><a href="https://microservices.io/patterns/data/transactional-outbox.html">https://microservices.io/patterns/data/transactional-outbox.html</a> </li>
+  <li><a href="https://en.m.wikipedia.org/wiki/Dead_letter_queue">https://en.m.wikipedia.org/wiki/Dead_letter_queue</a> </li>
+  <li><a href="https://www.cockroachlabs.com/blog/living-without-atomic-clocks/">https://www.cockroachlabs.com/blog/living-without-atomic-clocks/</a> </li>
+  <li><a href="https://jamesdunne.dev/posts/must-have-programming-tools/">https://jamesdunne.dev/posts/must-have-programming-tools/</a> </li>
   <li><a href="https://www.youtube.com/watch?app=desktop&v=ZSRHeXYDLko">https://www.youtube.com/watch?app=desktop&v=ZSRHeXYDLko</a> </li>
   <li><a href="https://www.youtube.com/watch?app=desktop&v=PLeJYFUBhbU">https://www.youtube.com/watch?app=desktop&v=PLeJYFUBhbU</a> </li>
   <li><a href="https://www.youtube.com/watch?app=desktop&v=OtozASk68Os">https://www.youtube.com/watch?app=desktop&v=OtozASk68Os</a> </li>
