--- a/what-i-read.html
+++ b/what-i-read.html
@@ -33,6 +33,7 @@
   <h6>last updated: 2023/04/12</h6>
   <h4>April 2023</h4>
 <ul>
+  <li><a href="https://www.youtube.com/watch?v=5IUj1EZwpJY">https://www.youtube.com/watch?v=5IUj1EZwpJY</a> </li>
   <li><a href="https://stanko.io/rabbitmq-is-more-than-a-sidekiq-replacement-b730d8176fb">https://stanko.io/rabbitmq-is-more-than-a-sidekiq-replacement-b730d8176fb</a> </li>
   <li><a href="https://www.crunchydata.com/blog/message-queuing-using-native-postgresql">https://www.crunchydata.com/blog/message-queuing-using-native-postgresql</a> </li>
   <li><a href="https://www.migops.com/blog/select-for-update-and-its-behavior-with-foreign-keys-in-postgresql/">https://www.migops.com/blog/select-for-update-and-its-behavior-with-foreign-keys-in-postgresql/</a> </li>
