--- a/what-i-read.html
+++ b/what-i-read.html
@@ -18,8 +18,8 @@
   <meta property="article:tag" content="software" />
   <meta property="article:tag" content="engineering" />
   <meta property="og:url" content="https://pineman.github.io/what-i-read.html" />
-  <meta property="article:published_time" content="20230412" />
-  <meta property="article:modified_time" content="20230412" />
+  <meta property="article:published_time" content="20230413" />
+  <meta property="article:modified_time" content="20230413" />
   <title>What I read</title>
   <meta property="og:title" content="What I read" />
   <meta name="description" content="What I read" />
@@ -30,9 +30,10 @@
 <a href="index.html">&lt; back</a>
 <article>
   <h1>What I read</h1>
-  <h6>last updated: 2023/04/12</h6>
+  <h6>last updated: 2023/04/13</h6>
   <h4>April 2023</h4>
 <ul>
+  <li><a href="https://engineering.gusto.com/our-ruby-on-rails-system-tests-got-4-times-faster-with-one-setting/">https://engineering.gusto.com/our-ruby-on-rails-system-tests-got-4-times-faster-with-one-setting/</a> </li>
   <li><a href="https://www.youtube.com/watch?v=8tCwRrm0HlU">https://www.youtube.com/watch?v=8tCwRrm0HlU</a> </li>
   <li><a href="https://www.youtube.com/watch?v=5IUj1EZwpJY">https://www.youtube.com/watch?v=5IUj1EZwpJY</a> </li>
   <li><a href="https://stanko.io/rabbitmq-is-more-than-a-sidekiq-replacement-b730d8176fb">https://stanko.io/rabbitmq-is-more-than-a-sidekiq-replacement-b730d8176fb</a> </li>
