upgrade to ruby 3.2.2

--- a/aoc3.html
+++ b/aoc3.html
@@ -219,7 +219,7 @@ href="https://news.ycombinator.com/item?id=33847479">reading up more on
 ChatGPT</a>, I'm convinced it won't put me out of a job just yet, or
 even next year. But in the next 10, 20 years?... I'm much more
 anxious.</p>
-<section id="footnotes" class="footnotes footnotes-end-of-document"
+<aside id="footnotes" class="footnotes footnotes-end-of-document"
 role="doc-endnotes">
 <hr />
 <ol>
@@ -237,7 +237,7 @@ href="https://github.com/pineman/AoC2022/blob/main/2022/input/3/bigboy.7z">Here'
 the one I used</a>.<a href="#fnref2" class="footnote-back"
 role="doc-backlink">↩︎</a></p></li>
 </ol>
-</section>
+</aside>
 </article>
 <a href="index.html">&lt; back</a>
 </div>
