--- a/what-i-read.html
+++ b/what-i-read.html
@@ -33,6 +33,7 @@
   <h6>last updated: 2023/04/16</h6>
   <h4>April 2023</h4>
 <ul>
+  <li><a href="https://www.destroyallsoftware.com/talks/boundaries">https://www.destroyallsoftware.com/talks/boundaries</a> </li>
   <li><a href="https://data-room-software.org/erlangonxen/">https://data-room-software.org/erlangonxen/</a> </li>
   <li><a href="https://www.destroyallsoftware.com/talks/the-birth-and-death-of-javascript">https://www.destroyallsoftware.com/talks/the-birth-and-death-of-javascript</a> - always important to occasionally rewatch</li>
   <li><a href="https://www.youtube.com/watch?v=G7OCOqXsw7s">https://www.youtube.com/watch?v=G7OCOqXsw7s</a> </li>
