--- a/what-i-read.html
+++ b/what-i-read.html
@@ -18,8 +18,8 @@
   <meta property="article:tag" content="software" />
   <meta property="article:tag" content="engineering" />
   <meta property="og:url" content="https://pineman.github.io/what-i-read.html" />
-  <meta property="article:published_time" content="20230417" />
-  <meta property="article:modified_time" content="20230417" />
+  <meta property="article:published_time" content="20230423" />
+  <meta property="article:modified_time" content="20230423" />
   <title>What I read</title>
   <meta property="og:title" content="What I read" />
   <meta name="description" content="What I read" />
@@ -30,9 +30,10 @@
 <a href="index.html">&lt; back</a>
 <article>
   <h1>What I read</h1>
-  <h6>last updated: 2023/04/17</h6>
+  <h6>last updated: 2023/04/23</h6>
   <h4>April 2023</h4>
 <ul>
+  <li><a href="https://news.ycombinator.com/item?id=25510116">https://news.ycombinator.com/item?id=25510116</a> </li>
   <li><a href="https://shopify.engineering/shopify-monolith">https://shopify.engineering/shopify-monolith</a> </li>
   <li><a href="https://engineering.gusto.com/laying-the-cultural-and-technical-foundation-for-big-rails/">https://engineering.gusto.com/laying-the-cultural-and-technical-foundation-for-big-rails/</a> </li>
   <li><a href="https://mailchi.mp/railsspeed/gvl-sql-shotgun-memory-leaks-and-more">https://mailchi.mp/railsspeed/gvl-sql-shotgun-memory-leaks-and-more</a> </li>
