--- a/what-i-read.html
+++ b/what-i-read.html
@@ -33,6 +33,7 @@
   <h6>last updated: 2023/04/23</h6>
   <h4>April 2023</h4>
 <ul>
+  <li><a href="https://github.com/tigerbeetledb/tigerbeetle/blob/main/docs/HISTORY.md">https://github.com/tigerbeetledb/tigerbeetle/blob/main/docs/HISTORY.md</a> </li>
   <li><a href="https://news.ycombinator.com/item?id=25510116">https://news.ycombinator.com/item?id=25510116</a> </li>
   <li><a href="https://shopify.engineering/shopify-monolith">https://shopify.engineering/shopify-monolith</a> </li>
   <li><a href="https://engineering.gusto.com/laying-the-cultural-and-technical-foundation-for-big-rails/">https://engineering.gusto.com/laying-the-cultural-and-technical-foundation-for-big-rails/</a> </li>
