--- a/what-i-read.html
+++ b/what-i-read.html
@@ -33,6 +33,7 @@
   <h6>last updated: 2023/04/23</h6>
   <h4>April 2023</h4>
 <ul>
+  <li><a href="https://refactoring.guru/design-patterns/state">https://refactoring.guru/design-patterns/state</a> </li>
   <li><a href="http://gameprogrammingpatterns.com/state.html">http://gameprogrammingpatterns.com/state.html</a> </li>
   <li><a href="https://github.com/tigerbeetledb/tigerbeetle/blob/main/docs/HISTORY.md">https://github.com/tigerbeetledb/tigerbeetle/blob/main/docs/HISTORY.md</a> </li>
   <li><a href="https://news.ycombinator.com/item?id=25510116">https://news.ycombinator.com/item?id=25510116</a> </li>
