--- a/what-i-read.html
+++ b/what-i-read.html
@@ -18,8 +18,8 @@
   <meta property="article:tag" content="software" />
   <meta property="article:tag" content="engineering" />
   <meta property="og:url" content="https://pineman.github.io/what-i-read.html" />
-  <meta property="article:published_time" content="20230425" />
-  <meta property="article:modified_time" content="20230425" />
+  <meta property="article:published_time" content="20230427" />
+  <meta property="article:modified_time" content="20230427" />
   <title>What I read</title>
   <meta property="og:title" content="What I read" />
   <meta name="description" content="What I read" />
@@ -30,9 +30,10 @@
 <a href="index.html">&lt; back</a>
 <article>
   <h1>What I read</h1>
-  <h6>last updated: 2023/04/25</h6>
+  <h6>last updated: 2023/04/27</h6>
   <h4>April 2023</h4>
 <ul>
+  <li><a href="https://about.sourcegraph.com/blog/postgres-text-search-balancing-query-time-and-relevancy">https://about.sourcegraph.com/blog/postgres-text-search-balancing-query-time-and-relevancy</a> </li>
   <li><a href="https://compileralchemy.substack.com/p/merge-sort-and-its-early-history">https://compileralchemy.substack.com/p/merge-sort-and-its-early-history</a> </li>
   <li><a href="https://www.kmjn.org/notes/prolog_lost_steam.html">https://www.kmjn.org/notes/prolog_lost_steam.html</a> </li>
   <li><a href="https://openjdk.org/projects/valhalla/design-notes/in-defense-of-erasure">https://openjdk.org/projects/valhalla/design-notes/in-defense-of-erasure</a> </li>
