--- a/aoc3.html
+++ b/aoc3.html
@@ -1,40 +1,41 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta charset="UTF-8">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="João Pinheiro">
-  <meta name="keywords" content="technology computer software engineering">
-  <meta property="og:image" content="https://pineman.github.io/assets/me.webp">
-  <meta property="og:locale" content="en_US">
-  <meta property="og:site_name" content="João Pinheiro">
-  <meta property="og:type" content="article">
-  <meta property="article:author" content="https://pineman.github.io">
-  <meta property="article:section" content="pineman's Blog">
-  <meta property="article:tag" content="technology">
-  <meta property="article:tag" content="computer">
-  <meta property="article:tag" content="software">
-  <meta property="article:tag" content="engineering">
-  <meta property="og:url" content="https://pineman.github.io/aoc3.html">
-  <meta property="article:published_time" content="20221203">
-  <meta property="article:modified_time" content="20221203">
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="João Pinheiro" />
+  <meta name="keywords" content="technology computer software engineering" />
+  <meta property="og:image" content="https://pineman.github.io/assets/me.webp" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:site_name" content="João Pinheiro" />
+  <meta property="og:type" content="article" />
+  <meta property="article:author" content="https://pineman.github.io" />
+  <meta property="article:section" content="pineman's Blog" />
+  <meta property="article:tag" content="technology" />
+  <meta property="article:tag" content="computer" />
+  <meta property="article:tag" content="software" />
+  <meta property="article:tag" content="engineering" />
+  <meta property="og:url" content="https://pineman.github.io/aoc3.html" />
+  <meta property="article:published_time" content="20221203" />
+  <meta property="article:modified_time" content="20221203" />
   <title>AoC 2022: day 3,
 profiling Go, existential crisis</title>
   <meta property="og:title" content="AoC 2022: day 3,
-profiling Go, existential crisis">
+profiling Go, existential crisis" />
   <meta name="description" content="AoC 2022: day 3,
-profiling Go, existential crisis">
+profiling Go, existential crisis" />
   <meta property="og:description" content="AoC 2022: day 3,
-profiling Go, existential crisis">
+profiling Go, existential crisis" />
   <link rel="stylesheet" href="assets/oceanicnext.min.css">
 </head>
 <body>
 <div id="wrap">
 <a href="index.html">&lt; back</a>
 <article>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
+<html><body>
 <h1 id="aoc-2022-day-3-profiling-go-existential-crisis">AoC 2022: day 3,
 profiling Go, existential crisis</h1>
 <h6 id="20221203">2022/12/03</h6>
@@ -219,6 +220,7 @@ so-called 'big boy' inputs. <a href="https://github.com/pineman/AoC2022/blob/mai
 the one I used</a>.<a href="#fnref2" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 </ol>
 </aside>
+</body></html>
 </article>
 <a href="index.html">&lt; back</a>
 </div>
