--- a/what-i-read.html
+++ b/what-i-read.html
@@ -33,6 +33,7 @@
   <h6>last updated: 2023/04/29</h6>
   <h4>April 2023</h4>
 <ul>
+  <li><a href="https://www.youtube.com/watch?v=fEdwfbv8LUc">https://www.youtube.com/watch?v=fEdwfbv8LUc</a> </li>
   <li><a href="https://about.sourcegraph.com/blog/postgres-text-search-balancing-query-time-and-relevancy">https://about.sourcegraph.com/blog/postgres-text-search-balancing-query-time-and-relevancy</a> </li>
   <li><a href="https://compileralchemy.substack.com/p/merge-sort-and-its-early-history">https://compileralchemy.substack.com/p/merge-sort-and-its-early-history</a> </li>
   <li><a href="https://www.kmjn.org/notes/prolog_lost_steam.html">https://www.kmjn.org/notes/prolog_lost_steam.html</a> </li>
