--- a/what-i-read.html
+++ b/what-i-read.html
@@ -18,8 +18,8 @@
   <meta property="article:tag" content="software" />
   <meta property="article:tag" content="engineering" />
   <meta property="og:url" content="https://pineman.github.io/what-i-read.html" />
-  <meta property="article:published_time" content="20230429" />
-  <meta property="article:modified_time" content="20230429" />
+  <meta property="article:published_time" content="20230430" />
+  <meta property="article:modified_time" content="20230430" />
   <title>What I read</title>
   <meta property="og:title" content="What I read" />
   <meta name="description" content="What I read" />
@@ -30,9 +30,10 @@
 <a href="index.html">&lt; back</a>
 <article>
   <h1>What I read</h1>
-  <h6>last updated: 2023/04/29</h6>
+  <h6>last updated: 2023/04/30</h6>
   <h4>April 2023</h4>
 <ul>
+  <li><a href="https://www.youtube.com/watch?v=FADQAnq0RpA&t=1s">https://www.youtube.com/watch?v=FADQAnq0RpA&t=1s</a> </li>
   <li><a href="https://www.youtube.com/watch?v=fEdwfbv8LUc">https://www.youtube.com/watch?v=fEdwfbv8LUc</a> </li>
   <li><a href="https://about.sourcegraph.com/blog/postgres-text-search-balancing-query-time-and-relevancy">https://about.sourcegraph.com/blog/postgres-text-search-balancing-query-time-and-relevancy</a> </li>
   <li><a href="https://compileralchemy.substack.com/p/merge-sort-and-its-early-history">https://compileralchemy.substack.com/p/merge-sort-and-its-early-history</a> </li>
