--- a/what-i-read.html
+++ b/what-i-read.html
@@ -33,6 +33,8 @@
   <h6>last updated: 2023/05/06</h6>
   <h4>May 2023</h4>
 <ul>
+  <li><a href="https://world.hey.com/dhh/even-amazon-can-t-make-sense-of-serverless-or-microservices-59625580">https://world.hey.com/dhh/even-amazon-can-t-make-sense-of-serverless-or-microservices-59625580</a> </li>
+  <li><a href="https://world.hey.com/dhh/they-re-rebuilding-the-death-star-of-complexity-4fb5d08d">https://world.hey.com/dhh/they-re-rebuilding-the-death-star-of-complexity-4fb5d08d</a> </li>
   <li><a href="https://blog.rubyhero.dev/advanced-active-record">https://blog.rubyhero.dev/advanced-active-record</a> </li>
   <li><a href="https://blog.rubyhero.dev/good-practices-with-active-record">https://blog.rubyhero.dev/good-practices-with-active-record</a> </li>
   <li><a href="https://prirai.github.io/books/unix-koans.html">https://prirai.github.io/books/unix-koans.html</a> </li>
