--- a/what-i-read.html
+++ b/what-i-read.html
@@ -33,6 +33,7 @@
   <h6>last updated: 2023/05/06</h6>
   <h4>May 2023</h4>
 <ul>
+  <li><a href="https://www.reddit.com/r/programmingcirclejerk/comments/135k7zs/i_write_code_100_hoursweek_heres_why_i_probably/">https://www.reddit.com/r/programmingcirclejerk/comments/135k7zs/i_write_code_100_hoursweek_heres_why_i_probably/</a> </li>
   <li><a href="https://world.hey.com/dhh/even-amazon-can-t-make-sense-of-serverless-or-microservices-59625580">https://world.hey.com/dhh/even-amazon-can-t-make-sense-of-serverless-or-microservices-59625580</a> </li>
   <li><a href="https://world.hey.com/dhh/they-re-rebuilding-the-death-star-of-complexity-4fb5d08d">https://world.hey.com/dhh/they-re-rebuilding-the-death-star-of-complexity-4fb5d08d</a> </li>
   <li><a href="https://blog.rubyhero.dev/advanced-active-record">https://blog.rubyhero.dev/advanced-active-record</a> </li>
