--- a/what-i-read.html
+++ b/what-i-read.html
@@ -33,6 +33,7 @@
   <h6>last updated: 2023/05/06</h6>
   <h4>May 2023</h4>
 <ul>
+  <li><a href="https://www.youtube.com/watch?v=nHIu9b4ny2o">https://www.youtube.com/watch?v=nHIu9b4ny2o</a> </li>
   <li><a href="https://www.youtube.com/watch?v=5EtV2JUU0Z4">https://www.youtube.com/watch?v=5EtV2JUU0Z4</a> </li>
   <li><a href="https://reddit.com/r/java/comments/12jaul0/good_java_industry_blogs/">https://reddit.com/r/java/comments/12jaul0/good_java_industry_blogs/</a> </li>
   <li><a href="https://www.reddit.com/r/programmingcirclejerk/comments/135k7zs/i_write_code_100_hoursweek_heres_why_i_probably/">https://www.reddit.com/r/programmingcirclejerk/comments/135k7zs/i_write_code_100_hoursweek_heres_why_i_probably/</a> </li>
