--- a/what-i-read.html
+++ b/what-i-read.html
@@ -18,8 +18,8 @@
   <meta property="article:tag" content="software" />
   <meta property="article:tag" content="engineering" />
   <meta property="og:url" content="https://pineman.github.io/what-i-read.html" />
-  <meta property="article:published_time" content="20230611" />
-  <meta property="article:modified_time" content="20230611" />
+  <meta property="article:published_time" content="20230612" />
+  <meta property="article:modified_time" content="20230612" />
   <title>What I read</title>
   <meta property="og:title" content="What I read" />
   <meta name="description" content="What I read" />
@@ -30,9 +30,10 @@
 <a href="index.html">&lt; back</a>
 <article>
   <h1>What I read</h1>
-  <h6>last updated: 2023/06/11</h6>
+  <h6>last updated: 2023/06/12</h6>
   <h4>June 2023</h4>
 <ul>
+  <li><a href="https://www.youtube.com/watch?v=B1J2RMorJXM">https://www.youtube.com/watch?v=B1J2RMorJXM</a> </li>
   <li><a href="https://www.youtube.com/watch?v=5rb0vvJ7NCY">https://www.youtube.com/watch?v=5rb0vvJ7NCY</a> -- really good!</li>
   <li><a href="https://www.figma.com/blog/how-figma-scaled-to-multiple-databases/">https://www.figma.com/blog/how-figma-scaled-to-multiple-databases/</a> </li>
   <li><a href="https://firehydrant.com/blog/using-advisory-locks-to-avoid-race-conditions-in-rails/">https://firehydrant.com/blog/using-advisory-locks-to-avoid-race-conditions-in-rails/</a> </li>
