copy assets in cv

--- a/cv/index.html
+++ b/cv/index.html
@@ -6,13 +6,13 @@
   <meta name="theme-color" content="#171B36">
   <link rel="icon" type="image/x-icon" href="../favicon.ico" />
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="../assets/fontawesome/css/all.css" />
+  <link rel="stylesheet" href="assets/fontawesome/css/all.css" />
   <title>João Pinheiro CV</title>
 </head>
 <body>
 <aside>
   <side-wrap>
-    <div id="photo"><img id="photo" src="../assets/me.webp" /></div>
+    <div id="photo"><img id="photo" src="assets/me.webp" /></div>
     <h2 id="name">João Pinheiro</h2>
     <div id="description">Software • Systems • Curiosity</div>
     <hr />
@@ -37,7 +37,7 @@
       <a target="_blank" href="https://abra.fly.dev">abra</a>, <a target="_blank" href="https://github.com/pineman/LEDmatrix">LED Matrix</a>, <a target="_blank" href="https://github.com/pineman/code">playground</a>, <a target="_blank" href="https://github.com/pineman/pineman.github.io">website</a>
   </side-wrap>
   <version>
-    <a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: a244481
+    <a target="_blank" href="https://pineman.github.io/cv">HTML version</a> | <a target="_blank" href="https://pineman.github.io/cv/cv.pdf">PDF version</a> | rev: 4fb4a0b
 
   </version>
 </aside>
