--- a/what-i-read.html
+++ b/what-i-read.html
@@ -33,6 +33,7 @@
   <h6>last updated: 2023/06/28</h6>
 <h4>June 2023</h4>
 <ul>
+  <li><a href="https://cohost.org/tef/post/1764930-how-not-to-write-a">https://cohost.org/tef/post/1764930-how-not-to-write-a</a> </li>
   <li><a href="https://www.bitecode.dev/p/hype-cycles">https://www.bitecode.dev/p/hype-cycles</a> </li>
   <li><a href="https://web.archive.org/web/20160416000938/https://circleci.com/blog/it-really-is-the-future/">https://web.archive.org/web/20160416000938/https://circleci.com/blog/it-really-is-the-future/</a> </li>
   <li><a href="https://web.archive.org/web/20160817120102/https://circleci.com/blog/its-the-future/">https://web.archive.org/web/20160817120102/https://circleci.com/blog/its-the-future/</a> </li>
