--- a/what-i-read.html
+++ b/what-i-read.html
@@ -18,8 +18,8 @@
   <meta property="article:tag" content="software" />
   <meta property="article:tag" content="engineering" />
   <meta property="og:url" content="https://pineman.github.io/what-i-read.html" />
-  <meta property="article:published_time" content="20230701" />
-  <meta property="article:modified_time" content="20230701" />
+  <meta property="article:published_time" content="20230708" />
+  <meta property="article:modified_time" content="20230708" />
   <title>What I read</title>
   <meta property="og:title" content="What I read" />
   <meta name="description" content="What I read" />
@@ -30,7 +30,20 @@
 <a href="index.html">&lt; back</a>
 <article>
   <h1>What I read</h1>
-  <h6>last updated: 2023/07/01</h6>
+  <h6>last updated: 2023/07/08</h6>
+<h4>July 2023</h4>
+<ul>
+  <li><a href="https://meetryanflowers.com/that-wont-work/">https://meetryanflowers.com/that-wont-work/</a> </li>
+  <li><a href="https://cohost.org/tef/post/1794038-special-interest-inf">https://cohost.org/tef/post/1794038-special-interest-inf</a> </li>
+  <li><a href="https://www.youtube.com/watch?app=desktop&v=ZM8lJIJb2Q4">https://www.youtube.com/watch?app=desktop&v=ZM8lJIJb2Q4</a> </li>
+  <li><a href="https://medium.com/airbnb-engineering/sunsetting-react-native-1868ba28e30a">https://medium.com/airbnb-engineering/sunsetting-react-native-1868ba28e30a</a> </li>
+  <li><a href="https://apenwarr.ca/log/?m=202306">https://apenwarr.ca/log/?m=202306</a> </li>
+  <li><a href="https://usefathom.com/blog/worlds-fastest-analytics">https://usefathom.com/blog/worlds-fastest-analytics</a> </li>
+  <li><a href="https://usefathom.com/blog/does-laravel-scale">https://usefathom.com/blog/does-laravel-scale</a> </li>
+  <li><a href="https://usefathom.com/blog/migrating-our-database">https://usefathom.com/blog/migrating-our-database</a> </li>
+  <li><a href="https://cohost.org/tef/post/1764930-how-not-to-write-a">https://cohost.org/tef/post/1764930-how-not-to-write-a</a> </li>
+  <li><a href="http://paulgraham.com/greatwork.html">http://paulgraham.com/greatwork.html</a> </li>
+</ul>
 <h4>June 2023</h4>
 <ul>
   <li><a href="https://www.paweldabrowski.com/articles/five-things-you-did-not-know-about-rails-transactions">https://www.paweldabrowski.com/articles/five-things-you-did-not-know-about-rails-transactions</a> </li>
